--- a/source/stylesheets/ui/_current-step.scss
+++ b/source/stylesheets/ui/_current-step.scss
@@ -3,7 +3,7 @@
 .current-step {
   position: absolute;
   top: 50%;
-  left: $controls-width / 2;
+  left: 50%;
   z-index: 2;
 
   width: 30px;
@@ -21,5 +21,6 @@
 
   @include at-small {
     top: 0;
+    left: $controls-width / 2;
   }
 }
